--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,32 +1,40 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/activityLoginLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LoginActivity" >
 
     <EditText
-        android:id="@+id/emailadresse"
+        android:id="@+id/emailadresseEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/passwordnumerischEdit"
+        android:layout_alignParentLeft="true"
         android:ems="10"
         android:inputType="textEmailAddress" >
 
         <requestFocus />
     </EditText>
 
-    <EditText
-        android:id="@+id/passwordnumerisch"
+    <Button
+        android:id="@+id/einloggenButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="166dp"
+        android:text="@string/einloggen" />
+
+    <EditText
+        android:id="@+id/passwordnumerischEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/einloggenButton"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="32dp"
         android:ems="10"
         android:inputType="textPassword|number" />
 
-    <Button
-        android:id="@+id/einloggenbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/einloggen" />
-
-</LinearLayout>
+</RelativeLayout>
