Scrollview zu TODODetail hinzugefügt

--- a/res/layout/tododetail.xml
+++ b/res/layout/tododetail.xml
@@ -1,90 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/todoDetailLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-    <EditText
-        android:id="@+id/nameEditText"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:ems="10"
-        android:inputType="text" />
+        android:layout_height="match_parent" >
 
-    <DatePicker
-        android:id="@+id/datumpicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/nameEditText" />
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:ems="10"
+            android:inputType="text" >
 
-    <TimePicker
-        android:id="@+id/timePicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/datumpicker" />
+            <requestFocus />
+        </EditText>
 
-    <CheckBox
-        android:id="@+id/erledigtCheckBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/timePicker"
-        android:text="@string/erledigt" />
+        <DatePicker
+            android:id="@+id/datumpicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/nameEditText" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/erledigtCheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:text="@string/wichtigkeit"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/datumpicker" />
 
-    <RatingBar
-        android:id="@+id/wichtigkeitBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:numStars="5"
-        android:stepSize="1" />
+        <CheckBox
+            android:id="@+id/erledigtCheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/timePicker"
+            android:text="@string/erledigt" />
 
-    <EditText
-        android:id="@+id/beschreibung"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/wichtigkeitBar"
-        android:ems="10"
-        android:inputType="textMultiLine" >
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/erledigtCheckBox"
+            android:text="@string/wichtigkeit"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <requestFocus />
-    </EditText>
+        <RatingBar
+            android:id="@+id/wichtigkeitBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/textView1"
+            android:numStars="5"
+            android:stepSize="1" />
 
-    <Button
-        android:id="@+id/buttonDelete"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/beschreibung"
-        android:text="@string/buttonDelete" />
+        <EditText
+            android:id="@+id/beschreibung"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/wichtigkeitBar"
+            android:ems="10"
+            android:inputType="textMultiLine" />
 
-    <Button
-        android:id="@+id/buttonSave"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/buttonDelete"
-        android:layout_alignBottom="@+id/buttonDelete"
-        android:layout_alignParentRight="true"
-        android:text="@string/buttonSave" />
+        <Button
+            android:id="@+id/buttonDelete"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/beschreibung"
+            android:text="@string/buttonDelete" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/buttonSave"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/buttonDelete"
+            android:layout_alignBottom="@+id/buttonDelete"
+            android:layout_alignParentRight="true"
+            android:text="@string/buttonSave" />
+
+    </RelativeLayout>
+
+</ScrollView>
