Modelklasse,Login in Testversion, Klasse für Datenbankanbindung

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -13,7 +13,8 @@
         android:layout_above="@+id/passwordnumerischEdit"
         android:layout_alignParentLeft="true"
         android:ems="10"
-        android:inputType="textEmailAddress" >
+        android:inputType="textEmailAddress"
+        android:singleLine="true" >
 
         <requestFocus />
     </EditText>
@@ -25,6 +26,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="166dp"
+        android:enabled="false"
         android:text="@string/einloggen" />
 
     <EditText
@@ -35,6 +37,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="32dp"
         android:ems="10"
-        android:inputType="textPassword|number" />
+        android:inputType="number"
+        android:password="true"
+        android:maxLength="6"
+        android:singleLine="true" />
 
 </RelativeLayout>
