--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -6,19 +6,6 @@
     android:orientation="vertical"
     tools:context=".LoginActivity" >
 
-    <EditText
-        android:id="@+id/emailadresseEdit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/passwordnumerischEdit"
-        android:layout_alignParentLeft="true"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:singleLine="true" >
-
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/einloggenButton"
         android:layout_width="match_parent"
@@ -28,6 +15,17 @@
         android:layout_marginBottom="166dp"
         android:enabled="false"
         android:text="@string/einloggen" />
+    
+     <EditText
+        android:id="@+id/emailadresseEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/passwordnumerischEdit"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="45dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/passwordnumerischEdit"
@@ -35,11 +33,37 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/einloggenButton"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="32dp"
         android:ems="10"
         android:inputType="number"
-        android:password="true"
         android:maxLength="6"
+        android:password="true"
         android:singleLine="true" />
+
+    <TextView
+        android:id="@+id/passwordFalsch"
+        style="@style/textStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/passwordnumerischEdit"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="18dp"
+        android:text="@string/passwortFalsch"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="12sp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/emailFalsch"
+        style="@style/textStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/emailadresseEdit"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="16dp"
+        android:text="@string/emailFalsch"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="12sp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
