--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,10 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="textStyle">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#FFFF0000</item>
+        <item name="android:gravity">center</item>
+    </style>
 
 </resources>
