--- a/res/layout/tododetail.xml
+++ b/res/layout/tododetail.xml
@@ -1,93 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/todoDetailLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <RelativeLayout
+    <EditText
+        android:id="@+id/nameEditText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:ems="10"
+        android:inputType="text" >
 
-        <EditText
-            android:id="@+id/nameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:ems="10"
-            android:inputType="text" >
+        <requestFocus />
+    </EditText>
 
-            <requestFocus />
-        </EditText>
+    <DatePicker
+        android:id="@+id/datumpicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/nameEditText" />
 
-        <DatePicker
-            android:id="@+id/datumpicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/nameEditText" />
+    <TimePicker
+        android:id="@+id/timePicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/datumpicker" />
 
-        <TimePicker
-            android:id="@+id/timePicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/datumpicker" />
+    <CheckBox
+        android:id="@+id/erledigtCheckBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/timePicker"
+        android:text="@string/erledigt" />
 
-        <CheckBox
-            android:id="@+id/erledigtCheckBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/timePicker"
-            android:text="@string/erledigt" />
+    <EditText
+        android:id="@+id/beschreibung"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/erledigtCheckBox"
+        android:ems="10"
+        android:inputType="textMultiLine" />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/erledigtCheckBox"
-            android:text="@string/wichtigkeit"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+    <Button
+        android:id="@+id/buttonDelete"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/beschreibung"
+        android:text="@string/buttonDelete" />
 
-        <RatingBar
-            android:id="@+id/wichtigkeitBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/textView1"
-            android:numStars="5"
-            android:stepSize="1" />
+    <Button
+        android:id="@+id/buttonSave"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/buttonDelete"
+        android:layout_alignBottom="@+id/buttonDelete"
+        android:layout_alignParentRight="true"
+        android:text="@string/buttonSave" />
 
-        <EditText
-            android:id="@+id/beschreibung"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/wichtigkeitBar"
-            android:ems="10"
-            android:inputType="textMultiLine" />
+    <CheckBox
+        android:id="@+id/checkBoxWichtigkeit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/erledigtCheckBox"
+        android:text="@string/wichtig" />
 
-        <Button
-            android:id="@+id/buttonDelete"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/beschreibung"
-            android:text="@string/buttonDelete" />
-
-        <Button
-            android:id="@+id/buttonSave"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/buttonDelete"
-            android:layout_alignBottom="@+id/buttonDelete"
-            android:layout_alignParentRight="true"
-            android:text="@string/buttonSave" />
-
-    </RelativeLayout>
-
-</ScrollView>
+</RelativeLayout>
