--- a/res/layout/todoall_item.xml
+++ b/res/layout/todoall_item.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/todoall_itemRelativeLayout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayoutTodoItem"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/todoall_itemName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/todoall_itemFaelligkeit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/todoall_itemName"
-        android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <CheckBox
         android:id="@+id/todoall_itemErledightcheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/todoall_itemFaelligkeit"
-        android:layout_alignBottom="@+id/todoall_itemFaelligkeit"
-        android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
         android:text="@string/erledigt" />
 
@@ -38,8 +28,8 @@
         android:id="@+id/todoall_itemratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/todoall_itemErledightcheckBox"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp" />
+        android:layout_marginTop="22dp"
+        android:isIndicator="true"
+        android:stepSize="1" />
 
-</RelativeLayout>
+</LinearLayout>
