--- a/res/layout/item_in_listview.xml
+++ b/res/layout/item_in_listview.xml
@@ -10,8 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:padding="10dp"
-        android:textSize="20sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/todoall_itemFaelligkeit"
@@ -19,8 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/itemName"
-        android:padding="10dp"
-        android:textSize="20sp" />
+        android:textSize="12sp" />
 
     <CheckBox
         android:id="@+id/todoall_itemErledightcheckBox"
@@ -28,9 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/todoall_itemFaelligkeit"
-        android:layout_marginRight="16dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:textSize="12sp"
         android:text="@string/erledigt" />
 
     <CheckBox
@@ -42,6 +40,7 @@
         android:layout_alignParentRight="true"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:textSize="12sp"
         android:text="@string/wichtig" />
 
 </RelativeLayout>
