--- a/res/layout/tododetail.xml
+++ b/res/layout/tododetail.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:ems="10"
+        android:imeOptions="actionDone"
         android:inputType="text" >
 
         <requestFocus />
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/timePicker"
+        android:textSize="12sp"
         android:text="@string/erledigt" />
 
     <EditText
@@ -45,11 +47,12 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/erledigtCheckBox"
         android:ems="10"
+        android:imeOptions="actionDone"
         android:inputType="textMultiLine" />
 
     <Button
         android:id="@+id/buttonDelete"
-        style="?android:attr/buttonStyleSmall"
+        style="@style/textStyleElement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -58,7 +61,7 @@
 
     <Button
         android:id="@+id/buttonSave"
-        style="?android:attr/buttonStyleSmall"
+        style="@style/textStyleElement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/buttonDelete"
@@ -72,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/erledigtCheckBox"
+        android:textSize="12sp"
         android:text="@string/wichtig" />
 
 </RelativeLayout>
