--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,5 +21,9 @@
         <item name="android:textColor">#FFFF0000</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="textStyleElement">
+        <item name="android:textSize">12sp</item>
+        <item name="android:gravity">center</item>
+    </style>
 
 </resources>
