--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -6,66 +6,74 @@
     android:orientation="vertical"
     tools:context=".LoginActivity" >
 
-    <Button
-        android:id="@+id/einloggenButton"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/emailFalsch"
+        style="@style/textStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="166dp"
-        android:enabled="false"
-        android:text="@string/einloggen" />
-    
-     <EditText
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="104dp"
+        android:text="@string/emailFalsch"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="12sp"
+        android:visibility="invisible" />
+
+    <EditText
         android:id="@+id/emailadresseEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/passwordnumerischEdit"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="45dp"
+        android:layout_below="@+id/emailFalsch"
         android:ems="10"
+        android:imeOptions="actionDone"
         android:inputType="textEmailAddress"
-        android:imeOptions="actionDone"
-        android:singleLine="true" />
+        android:singleLine="true" >
 
-    <EditText
-        android:id="@+id/passwordnumerischEdit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/einloggenButton"
-        android:layout_alignParentLeft="true"
-        android:ems="10"
-        android:inputType="number"
-        android:maxLength="6"
-        android:password="true"
-        android:imeOptions="actionDone"
-        android:singleLine="true" />
+        <requestFocus />
+    </EditText>
 
     <TextView
         android:id="@+id/passwordFalsch"
         style="@style/textStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/passwordnumerischEdit"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="18dp"
+        android:layout_below="@+id/emailadresseEdit"
         android:text="@string/passwortFalsch"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="12sp"
         android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/emailFalsch"
-        style="@style/textStyle"
+    <EditText
+        android:id="@+id/passwordnumerischEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/passwordFalsch"
+        android:ems="10"
+        android:imeOptions="actionDone"
+        android:inputType="number"
+        android:maxLength="6"
+        android:password="true"
+        android:singleLine="true" />
+
+    <CheckBox
+        android:id="@+id/checkBoxLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/emailadresseEdit"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="16dp"
-        android:text="@string/emailFalsch"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="12sp"
-        android:visibility="invisible" />
+        android:layout_below="@+id/passwordnumerischEdit"
+        android:text="@string/lokallogin" />
+
+    <Button
+        android:id="@+id/einloggenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/checkBoxLogin"
+        android:enabled="false"
+        android:text="@string/einloggen" />
 
 </RelativeLayout>
