Verknüpfung mit Kontakten möglich

--- a/res/layout/tododetail.xml
+++ b/res/layout/tododetail.xml
@@ -51,15 +51,6 @@
         android:inputType="textMultiLine" />
 
     <Button
-        android:id="@+id/buttonDelete"
-        style="@style/textStyleElement"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/beschreibung"
-        android:text="@string/buttonDelete" />
-
-    <Button
         android:id="@+id/buttonSave"
         style="@style/textStyleElement"
         android:layout_width="wrap_content"
@@ -77,5 +68,34 @@
         android:layout_alignTop="@+id/erledigtCheckBox"
         android:textSize="12sp"
         android:text="@string/wichtig" />
+
+    <Button
+        android:id="@+id/buttonDelete"
+        style="@style/textStyleElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/beschreibung"
+        android:layout_marginTop="56dp"
+        android:text="@string/buttonDelete" />
+
+    <ListView
+        android:id="@+id/listViewContacts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonSave"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/beschreibung" >
+
+    </ListView>
+
+    <Button
+        android:id="@+id/buttonAddContact"
+        style="@style/textStyleElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/buttonSave"
+        android:layout_centerHorizontal="true"
+        android:text="@string/addContact" />
 
 </RelativeLayout>
