--- a/res/layout/item_in_contactlist.xml
+++ b/res/layout/item_in_contactlist.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:text="@string/buttonDelete" />
 
     <TextView
